--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crossfit HardCore</title>
+    <!-- Primary Meta Tags -->
+    <title>Crossfit HardCore - Projeto de estudos</title>
+    <meta name="title" content="Crossfit HardCore - Projeto de estudos" />
+    <meta name="description" content="Projeto Html, Css e JavaScript com design no Figma" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bpereira06.github.io/hardcore-project/" />
+    <meta property="og:title" content="Crossfit HardCore - Projeto de estudos" />
+    <meta property="og:description" content="Projeto Html, Css e JavaScript com design no Figma" />
+    <meta property="og:image" content="https://bpereira06.github.io/hardcore-project/capa.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://bpereira06.github.io/hardcore-project/" />
+    <meta property="twitter:title" content="Crossfit HardCore - Projeto de estudos" />
+    <meta property="twitter:description" content="Projeto Html, Css e JavaScript com design no Figma" />
+    <meta property="twitter:image" content="https://bpereira06.github.io/hardcore-project/capa.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
